--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -14,6 +14,10 @@
     default = tracking
 [branch]
     autosetuprebase = always
+[merge]
+    ff = false
+[pull]
+    rebase = true
 [rerere]
     enabled = 1
 [browse-remote "github.com"]
