--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -30,6 +30,8 @@
     rev = https://{host}/{path}/changeset/{commit}
 [web]
     browser = google-chrome
+[ghq]
+    root = ~/src
 [alias]
     ci = commit -v
     lg = log --graph --pretty=oneline --decorate --date=short --abbrev-commit --branches
