--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -22,12 +22,14 @@
     enabled = 1
 [browse-remote "github.com"]
     top = https://{host}/{path}
-    ref = https://{host}/{path}/tree/{short_ref}
+    ref = https://{host}/{path}/pull/{short_ref}
     rev = https://{host}/{path}/commit/{commit}
+    file = "https://{host}/{path}/{file.directory? and :tree or :blob}/{short_rev}/{file}{line && \"#L%d\" % line}"
 [browse-remote "bitbucket.org"]
     top = https://{host}/{path}
     ref = https://{host}/{path}/changesets/tip/{short_ref}
     rev = https://{host}/{path}/changeset/{commit}
+    file = "https://{host}/{path}/{file.directory? and :tree or :blob}/{short_rev}/{file}{line && \"#L%d\" % line}"
 [web]
     browser = google-chrome
 [ghq]
